Fixed navigation z-index

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -10,5 +10,6 @@
 {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
