--- a/client/src/app/products/products.component.scss
+++ b/client/src/app/products/products.component.scss
@@ -8,7 +8,6 @@
 {
   position: sticky;
   top: 60px;
-  z-index: 99999;
 }
 .product-item
 {
